ci: run workflows only on master pushes and PRs

--- a/.github/workflows/cross_qemu.yml
+++ b/.github/workflows/cross_qemu.yml
@@ -2,7 +2,9 @@ name: cross-qemu
 
 on:
   push:
+    branches: [ master ]
   pull_request:
+    branches: [ master ]
   workflow_dispatch:
 
 permissions:
