--- a/.github/workflows/buildsystems_linux.yml
+++ b/.github/workflows/buildsystems_linux.yml
@@ -2,7 +2,9 @@ name: buildsystems-linux
 
 'on':
   push:
+    branches: [ master ]
   pull_request:
+    branches: [ master ]
 
 permissions:
   contents: read
